Fix for bug 231474. Correctly detect sup part to prevent attachments mixup. R=sspitzer, SR=bienvenu, A=chofmann